# scamp-poc

./: .gitignore  Makefile.am  configure.ac
src/: Makefile  Makefile.am  Makefile.in  catalog.c  catalog.h  chealpix.c  chealpix.h  chealpix_more.h  chealpixsphere.c  chealpixsphere.h  cmtree.c  cmtree.h  crossmatch.c  crossmatch.h  datum.c  datum.h  datumlist.c  datumlist.h  global.h  kdtree.c  kdtree.h  logger.c  logger.h  main.c  mem.c  mem.h  object.c  object.h  objectlist.c  pixelstore.c  pixelstore.h  scamp.h  scamppoc  test.c  test.h
src/catalog/: catalog.c  catalog.h  object.c  object.h  objectlist.c  objectlist.h
src/catalog/fits/: fitsbody.c  fitscat_defs.h  fitswrite.c
src/fits/: Makefile.am  fitscat.h  fitskey.c  fitsread.c
src/logger/: logger.c
src/logger/.deps/: logger.Po
src/objects/: object.c  object.h  objectlist.c  objectlist.h
src/objects/.deps/: object.Po  objectlist.Po
test/data/: data1.txt
tests/: Makefile.am  perf_crossmatch_single.c  perf_omp_test.c  scamp2_tests.sh  testCmtree  testCrossmatchLimit  testSingleCatCrossmatchAscii  test_angdist.c  test_chealpix_neighbours_nest.c  test_chealpixsphere_avltree.c  test_cmtree.c  test_crossmatch_limit.c  test_crossmatch_number.c  test_kdtree.c  test_single_cat_ascii_crossmatch.c  test_single_cat_crossmatch.c  test_suite.sh
tests/data/: tests_neighbours_nside16_nested.out
tests/data/ascii/: data1.txt  data2.txt  field1.txt  field2.txt
tests/data/asciicat/: README.md  t2_cat.txt  t3_cat.txt  t4_cat.txt
tests/data/fitscat/: tableinfo.txt
